--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "type": "git",
     "url": "git+https://github.com/chain-web/sk-node.git"
   },
-  "type": "commonjs",
+  "type": "module",
   "author": "scc",
   "license": "ISC",
   "bugs": {
@@ -19,7 +19,9 @@
   },
   "homepage": "https://github.com/chain-web/sk-node#readme",
   "devDependencies": {
+    "@types/mocha": "^9.1.0",
     "@types/node": "^17.0.23",
+    "mocha": "^9.2.2",
     "rollup": "^2.70.1",
     "rollup-plugin-typescript2": "^0.31.2",
     "ts-node": "^10.7.0",
